# mathOp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Consumer/: CMakeLists.txt  main.cpp
Producer/conan/recipies/fmt/: conanfile.py
cmake/: configure_unittests.cmake  copy_dll_for_unittests.cmake  install_sharedLib_for_unittests.cmake  install_target.cmake
conan/: conan-profile-android-static.txt  conan-profile-linux-release.txt  conan-profile-linux-static.txt  conan-profile-windows-shared.txt  conan-profile-windows.txt
conan/conanfiles/: conanfile.txt
conan/conanfiles/android/: conanfile.txt
conan/conanfiles/desktop/: conanfile.txt
conan/conanfiles/ios/: conanfile.txt
conan/profiles/: conan-profile-ios.txt  conan-profile-linux-shared.txt  conan-profile-linux-static.txt
conan/recipies/fmt/: conanfile.py
conan/recipies/fmt/test_package/: CMakeLists.txt  conanfile.py
conan/recipies/gtest/: conanfile.py
conan/recipies/mathOp/: conanfile.py
conan/recipies/pybind11/: conanfile.py
conan/recipies/pybind11/test_package/: CMakeLists.txt  conanfile.py  example.cpp
conan/tutorial/: conanfile.py
python_example/: mathOp.py  test_mathOp.py
scripts/android/: build.sh  clean.sh  configure.sh  deploy.sh  project_paths.sh  test.sh
scripts/ios/: configure.sh  project_paths.sh  uninstall_dependencies.sh
scripts/linux/: configure.sh  install.sh  project_paths.sh  test.sh
scripts/macos/: build.sh  configure.sh  install.sh  project_paths.sh  test.sh
scripts/python/: build.py  clean.py  configure_android.py  configure_desktop.py  dependencies_install.py  helper_functions.py  install.py  project_paths.py  test.py  uninstall_dependencies.py
scripts/windows/: build.ps1  configure.ps1  dependencies_install.ps1  project_paths.ps1
src/: CMakeLists.txt  mathOp.cpp  mathOp.h  mathOp_c_api.h  mathOp_pybind11_module.cpp
src/INTERNAL/: add.cpp  divide.cpp  mathOp_c_api.cpp  multiply.cpp  subtract.cpp
test/: CMakeLists.txt  test_mathOp_add.cpp  test_mathOp_divide.cpp  test_mathOp_multiply.cpp  test_mathOp_subtract.cpp
test/mathOp_c_api/: test_mathOp_c_api_add.cpp  test_mathOp_c_api_divide.cpp  test_mathOp_c_api_multiply.cpp  test_mathOp_c_api_subtract.cpp
test/mathOp_cpp/: test_mathOp_cpp_add.cpp  test_mathOp_cpp_divide.cpp  test_mathOp_cpp_multiply.cpp  test_mathOp_cpp_subtract.cpp
